--- a/mean-backend/package.json
+++ b/mean-backend/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "helmet": "^3.23.3",
     "mongoose": "^5.9.21",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "typescript-text-config": "^0.1.2"
   }
 }
